Convert all the toList calls to collect(Collectors.toList)
Resolves #14718