@@ -9,6 +9,7 @@ import androidx.annotation.MainThread;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 
+import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
 import com.fasterxml.jackson.databind.type.CollectionType;
 import com.fasterxml.jackson.databind.type.TypeFactory;
@@ -72,7 +73,7 @@ public class RecentEmojiPageModel implements EmojiPageModel {
   }
 
   @Override public List<Emoji> getDisplayEmoji() {
-    return Stream.of(getEmoji()).map(Emoji::new).toList();
+    return Stream.of(getEmoji()).map(Emoji::new).collect(Collectors.toList());
   }
 
   @Override public @Nullable Uri getSpriteUri() {
