@@ -8,6 +8,7 @@ import android.text.Spanned;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 
+import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
 
 import org.thoughtcrime.securesms.database.model.Mention;
@@ -56,8 +57,7 @@ public final class MentionAnnotation {
                      int spanStart  = spanned.getSpanStart(annotation);
                      int spanLength = spanned.getSpanEnd(annotation) - spanStart;
                      return new Mention(RecipientId.from(annotation.getValue()), spanStart, spanLength);
-                   })
-                   .toList();
+                   }).collect(Collectors.toList());
     }
     return Collections.emptyList();
   }
@@ -68,7 +68,6 @@ public final class MentionAnnotation {
 
   public static @NonNull List<Annotation> getMentionAnnotations(@NonNull Spanned spanned, int start, int end) {
     return Stream.of(spanned.getSpans(start, end, Annotation.class))
-                 .filter(MentionAnnotation::isMentionAnnotation)
-                 .toList();
+                 .filter(MentionAnnotation::isMentionAnnotation).collect(Collectors.toList());
   }
 }
