@@ -3,6 +3,7 @@ package org.thoughtcrime.securesms.conversation.ui.error;
 import androidx.annotation.NonNull;
 import androidx.annotation.Nullable;
 
+import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
 
 import org.thoughtcrime.securesms.database.model.MessageRecord;
@@ -28,7 +29,7 @@ public class TrustAndVerifyResult {
   }
 
   TrustAndVerifyResult(@NonNull List<ChangedRecipient> changedRecipients, @Nullable MessageRecord messageRecord, @NonNull Result result) {
-    this.changedRecipients = Stream.of(changedRecipients).map(changedRecipient -> changedRecipient.getRecipient().getId()).toList();
+    this.changedRecipients = Stream.of(changedRecipients).map(changedRecipient -> changedRecipient.getRecipient().getId()).collect(Collectors.toList());
     this.messageRecord     = messageRecord;
     this.result            = result;
   }
