@@ -31,7 +31,6 @@ import java.util.Currency;
 import java.util.List;
 import java.util.Locale;
 import java.util.Objects;
-
 import kotlin.Pair;
 
 import static java.util.Collections.emptyList;
@@ -131,7 +130,7 @@ public final class SetCurrencyViewModel extends ViewModel {
     private static final List<Currency> DEFAULT_CURRENCIES = Stream.of(BuildConfig.DEFAULT_CURRENCIES.split(","))
                                                                    .map(CurrencyUtil::getCurrencyByCurrencyCode)
                                                                    .filter(Objects::nonNull)
-                                                                   .toList();
+                                                                   .collect(com.annimon.stream.Collectors.toList());
 
     private final Currency             currentCurrency;
     private final CurrencyExchange     currencyExchange;
