@@ -4,6 +4,7 @@ import androidx.annotation.NonNull;
 import androidx.annotation.WorkerThread;
 import androidx.core.util.Consumer;
 
+import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
 
 import org.signal.core.util.concurrent.SignalExecutors;
@@ -23,7 +24,6 @@ class ShareInterstitialRepository {
   private List<Recipient> resolveRecipients(@NonNull Set<ContactSearchKey.RecipientSearchKey> recipientSearchKeys) {
     return Stream.of(recipientSearchKeys)
                  .map(ContactSearchKey.RecipientSearchKey::getRecipientId)
-                 .map(Recipient::resolved)
-                 .toList();
+                 .map(Recipient::resolved).collect(Collectors.toList());
   }
 }
