@@ -1,5 +1,6 @@
 package org.thoughtcrime.securesms.testutil;
 
+import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
 import com.google.common.collect.Sets;
 
@@ -50,8 +51,8 @@ public final class TestHelpers {
   public static void assertByteListEquals(List<byte[]> a, List<byte[]> b) {
     assertEquals(a.size(), b.size());
 
-    List<ByteBuffer> aBuffer = Stream.of(a).map(ByteBuffer::wrap).toList();
-    List<ByteBuffer> bBuffer = Stream.of(b).map(ByteBuffer::wrap).toList();
+    List<ByteBuffer> aBuffer = Stream.of(a).map(ByteBuffer::wrap).collect(Collectors.toList());
+    List<ByteBuffer> bBuffer = Stream.of(b).map(ByteBuffer::wrap).collect(Collectors.toList());
 
     assertTrue(aBuffer.containsAll(bBuffer));
   }
